Fixing overflow issue for reassign deliverables

--- a/app/react/components/DeliverableList/index.css
+++ b/app/react/components/DeliverableList/index.css
@@ -1,6 +1,9 @@
 .root {
   display: flex;
   flex-direction: column;
+  overflow: auto;
+  flex-basis: auto;
+  flex: 1;
 }
 
 .header {
@@ -14,5 +17,4 @@
 
 .list {
   flex: 1;
-  overflow: auto;
 }
